--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,12 +1,14 @@
 <p>Fill in the form below to log in!</p>
-<form action="/api/login" method="post">
+{{ mark }}
+<form method="post">
 	<p>
-		<input type="text" name='user[username]' placeholder='Username'/>
+		<input type="text" ng-model='formData.user[username]' placeholder='Username'/>
 	</p>
 	<p>
-		<input type="password" name='user[password]' placeholder='Password'/>
+		<input type="password" ng-model='formData.user[password]' placeholder='Password'/>
 	</p>
 	<p>
-		<input type="submit" value="Login"/>
+		<button type="submit" value="Login" ng-click="login()">login</button>
 	</p>
 </form> 
+
