--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,12 +1,14 @@
 <p>Fill in the form below to sign up!</p>
-<form action="/api/register" method="post">
+<!-- FORM TO CREATE USERS -->
+{{ mark }}
+<form method="post">
 	<p>
-		<input type="text" name='user[username]' placeholder='Username'/>
+		<input type="text" ng-model='formData.user.username' placeholder='Username'/>
 	</p>
 	<p>
-		<input type="password" name='user[password]' placeholder='Password'/>
+		<input type="password" ng-model='formData.user.password' placeholder='Password'/>
 	</p>
 	<p>
-		<input type="submit" value="Register"/>
+		<button type="submit" value="Register" ng-click="register()">Register</button>
 	</p>
 </form> 
