add register, login and logout logic

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,6 +1,6 @@
 <p>Fill in the form below to sign up!</p>
 <!-- FORM TO CREATE USERS -->
-{{ mark }}
+{{ message }}
 <form method="post">
 	<p>
 		<input type="text" ng-model='formData.user.username' placeholder='Username'/>
