--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,11 +1,11 @@
 <p>Fill in the form below to log in!</p>
-{{ mark }}
+{{ message }}
 <form method="post">
 	<p>
-		<input type="text" ng-model='formData.user[username]' placeholder='Username'/>
+		<input type="text" ng-model='formData.user.username' placeholder='Username'/>
 	</p>
 	<p>
-		<input type="password" ng-model='formData.user[password]' placeholder='Password'/>
+		<input type="password" ng-model='formData.user.password' placeholder='Password'/>
 	</p>
 	<p>
 		<button type="submit" value="Login" ng-click="login()">login</button>
